0029960: Foundation Classes - disarm OSD_ThreadPool copy constructor

Private copy constructors have been added to OSD_ThreadPool
and Standard_Condition to protect misuse.